--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://ticketille_owner:u1rVGeylpz7N@ep-morning-band-a1ubsaca.ap-southeast-1.aws.neon.tech/ticketille?sslmode=require"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET=thisisapassword
