--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.446.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
